[feature/HD-38] fix code create and update skill
